--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
     </section>
 
     <section class="area3">
-        
-            <img src="./imgs/imagen.svg" style="display:block" id="img">
-            <h2 style="display:block" id="texto1">Ningún mensaje fue encontrado</h2>
+            <img src="./imgs/imagen.svg" style="display:block" id="img" class="img">
+            <h2 style="display:block" id="texto1" class="mensaje">Ningún mensaje fue encontrado</h2>
             <p style="display:block" id="texto2">Ingresa el texto que desees encriptar o desencriptar</p>
             <div class="textoEncrip" id="textEncriptado" style="display:none"></div>
             <button onclick="copiarTexto();" id="copiarBtn" class="botonCopiar" style="display:none">Copiar</button>
-        
-     </section>
+    </section>
 
     <script src="app.js"></script>
 </body>
