--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </section>
      
     <section class="area2">
-            <input type="text" class="textNormal" id="inputText" placeholder="Ingresa un texto para encriptar" oninput="habilitarDesencriptar()">
+            <input type="text" class="textNormal" id="inputText" placeholder="Ingresa un texto para encriptar">
             <p class="parrafo">Solo letras minúsculas y sin acentos</p> 
             <div class="botones">
                     <button onclick="encriptarTexto();" class="botonEncriptar" >Encriptar!</button>
-                    <button onclick="desencriptarTexto();" id="desencriptarBtn" disabled class="botonEncriptar">Desencriptar!</button>
+                    <button onclick="desencriptarTexto();" id="desencriptarBtn" class="botonEncriptar">Desencriptar!</button>
             </div> 
     </section>
 
