--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                     <button onclick="encriptarTexto();" class="botonEncriptar" >Encriptar!</button>
                     <button onclick="desencriptarTexto();" id="desencriptarBtn" class="botonEncriptar">Desencriptar!</button>
             </div> 
+            <p class="copyright">&copy Copyright Alexandra Mendoza - 2024</p>
+
     </section>
 
     <section class="area3">
