corrigiendo ingreso de mayúsculas y minúsculas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </section>
      
     <section class="area2">
-            <textarea class="textNormal" cols="30" rows="10" id="inputText" placeholder="Ingresa un texto para encriptar"></textarea>
+            <textarea class="textNormal" cols="30" rows="10" id="inputText" oninput="convertirTexto()" placeholder="Ingresa un texto para encriptar"></textarea>
             <p class="parrafo">Solo letras minúsculas y sin acentos</p> 
             <div class="botones">
                     <button onclick="encriptarTexto();" class="botonEncriptar" >Encriptar!</button>
